More style updates

--- a/views/index-layout.ejs
+++ b/views/index-layout.ejs
@@ -14,5 +14,6 @@
             <li><a href="<%= chapters[i][0] %>" target="content"><%= chapters[i][1] %></a></li>
             <% } %>
         </ol>
+        <p><a href="https://github.com/mjijackson/strata" target="_blank">Contribute</a></p>
     </body>
 </html>
