--- a/public/manual/chapter-style.css
+++ b/public/manual/chapter-style.css
@@ -8,11 +8,16 @@ a:link, a:visited {
 }
 
 h1, h2, h3, h4, h5, h6, p, ul, ol, pre {
-  margin-bottom: 18px;
+  margin-bottom: 21px;
 }
 
 h1 {
   font-size: 24px;
+  line-height: 28px;
+}
+
+h2 {
+  font-size: 18px;
   line-height: 28px;
 }
 
