Renamed some files

--- a/views/chapter-index.ejs
+++ b/views/chapter-index.ejs
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Strata Manual Chapter Index</title>
         <link rel="stylesheet" type="text/css" href="/reset.css">
-        <link rel="stylesheet" type="text/css" href="/manual/index-style.css">
+        <link rel="stylesheet" type="text/css" href="/chapter-index.css">
     </head>
     <body>
         <h1>Chapters</h1>
