--- a/views/chapter.ejs
+++ b/views/chapter.ejs
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Strata Manual &raquo; <%= title %></title>
         <link rel="stylesheet" type="text/css" href="/reset.css">
-        <link rel="stylesheet" type="text/css" href="/manual/chapter-style.css">
+        <link rel="stylesheet" type="text/css" href="/chapter.css">
         <link rel="stylesheet" type="text/css" href="/sh_emacs.css">
         <script type="text/javascript" src="/sh_main.min.js"></script>
         <script type="text/javascript" src="/sh_javascript.min.js"></script>
