--- a/views/chapter.ejs
+++ b/views/chapter.ejs
@@ -11,9 +11,15 @@
         <script type="text/javascript" src="/sh_javascript.min.js"></script>
         <script type="text/javascript">
         window.onload = function () {
-            var pres = document.getElementsByTagName("pre");
+            var pres = document.getElementsByTagName("pre"),
+                text;
+
             for (var i = 0; i < pres.length; ++i) {
-                pres[i].className = "sh_javascript";
+                text = pres[i].innerText || "";
+
+                if (!(/^\s*\$/).test(text)) {
+                    pres[i].className = "sh_javascript";
+                }
             }
 
             sh_highlightDocument();
