--- a/views/chapter-index.ejs
+++ b/views/chapter-index.ejs
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>Strata Manual Chapter Index</title>
+        <title>Strata Manual Index</title>
         <link rel="stylesheet" type="text/css" href="/reset.css">
         <link rel="stylesheet" type="text/css" href="/chapter-index.css">
     </head>
@@ -14,6 +14,6 @@
             <li><a href="<%= chapters[i][0] %>" target="content"><%= chapters[i][1] %></a></li>
             <% } %>
         </ol>
-        <p><a href="https://github.com/mjijackson/strata" target="_blank">Contribute</a></p>
+        <p><a href="https://github.com/mjijackson/strata/tree/master/doc" target="_blank">Contribute</a></p>
     </body>
 </html>
