--- a/templates/chapter.mustache
+++ b/templates/chapter.mustache
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>Strata Manual &raquo; <%= title %></title>
+        <title>Strata Manual &raquo; {{{title}}}</title>
         <link rel="stylesheet" type="text/css" href="/reset.css">
         <link rel="stylesheet" type="text/css" href="/chapter.css">
         <link rel="stylesheet" type="text/css" href="/sh_emacs.css">
@@ -28,9 +28,9 @@
     </head>
     <body>
         <div id="content">
-            <a class="edit" title="Edit this page" target="_blank" href="<%- editUrl %>">Edit</a>
-            <%- content %>
-            <a class="edit" title="Edit this page" target="_blank" href="<%- editUrl %>">Edit</a>
+            <a class="edit" title="Edit this page" target="_blank" href="{{{editUrl}}}">Edit</a>
+            {{{content}}}
+            <a class="edit" title="Edit this page" target="_blank" href="{{{editUrl}}}">Edit</a>
         </div>
     </body>
 </html>
